<resources>
    <string name="app_name">HybridEH</string>

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>

    <string name="audio_record_cancel">取消</string>
    <string name="audio_record_click_record">点击录音</string>
    <string name="audio_record_recording">录音中</string>
    <string name="audio_record_back">返回</string>
    <string name="audio_record_finish">完成</string>
    <string name="audio_record_click_play">点击播放</string>
    <string name="audio_record_click_pause">点击暂停</string>
</resources>
