<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff">

  <LinearLayout
      android:id="@+id/ll_ready_record"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:visibility="visible"
      android:orientation="vertical">
    <TextView
        android:id="@+id/tv_ready_record_cancle"
        android:layout_width="64dp"
        android:layout_height="54dp"
        android:text="@string/audio_record_cancel"
        android:textColor="@color/gray_999999"
        android:textSize="17sp"
        android:gravity="center"
        android:layout_gravity="end"/>
    <ImageView
        android:id="@+id/iv_click_record"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/bg_ready_record"/>
    <TextView
        android:id="@+id/tv_click_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record_click_record"
        android:textColor="@color/black_666666"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"/>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_recording"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:visibility="gone"
      android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_recording"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="69dp"
        android:src="@drawable/bg_recording"/>
    <TextView
        android:id="@+id/tv_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record_recording"
        android:textColor="#3ABAEE"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="3dp"/>
    <Chronometer
        android:id="@+id/ch_record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3ABAEE"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"/>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_click_play"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:visibility="gone"
      android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:id="@+id/tv_click_play_back"
          android:layout_width="64dp"
          android:layout_height="54dp"
          android:gravity="center"
          android:text="@string/audio_record_back"
          android:textSize="17sp"
          android:textColor="@color/gray_999999"/>
      <TextView
          android:id="@+id/tv_click_play_finish"
          android:layout_width="64dp"
          android:layout_height="54dp"
          android:gravity="center"
          android:layout_alignParentEnd="true"
          android:text="@string/audio_record_finish"
          android:textSize="17sp"
          android:textColor="#3ABAEE"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_click_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bg_click_play"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record_click_play"
        android:textColor="@color/black_666666"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/tv_record_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray_999999"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"/>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_click_pause"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:visibility="gone"
      android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:id="@+id/tv_click_pause_back"
          android:layout_width="64dp"
          android:layout_height="54dp"
          android:gravity="center"
          android:text="@string/audio_record_back"
          android:textSize="17sp"
          android:textColor="@color/gray_999999"/>
      <TextView
          android:id="@+id/tv_click_pause_finish"
          android:layout_width="64dp"
          android:layout_height="54dp"
          android:gravity="center"
          android:layout_alignParentEnd="true"
          android:text="@string/audio_record_finish"
          android:textSize="17sp"
          android:textColor="#3ABAEE"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
      <ImageView
          android:id="@+id/iv_click_pause"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_centerHorizontal="true"
          android:src="@drawable/bg_click_pause"/>
      <com.pasc.lib.hybrid.eh.view.CircleProgressBar
          android:id="@+id/circle_progress_bar"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:layout_marginTop="5dp"
          android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_click_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record_click_pause"
        android:textColor="@color/black_666666"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"/>
    <Chronometer
        android:id="@+id/ch_record_remain_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray_999999"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"/>
  </LinearLayout>
</LinearLayout>